# heirloom-ai-latest-version

./: .env.example  .gitignore  .replit  App.tsx  DEPLOY_TO_GITHUB.md  LOGO_GUIDE.md  README-MOBILE.md  README-VERIFICATION.md  README.md  SETUP.md  app.json  biometric-demo.html  biometric_implementation.js  create-logos.js  demo.html  drizzle.config.ts  executor_plan.md  index-simple.html  index.cjs  index.html  index.ts  minimal_server.js  output.html  package-lock.json  package.json  package.mobile.json  pure-server.js  pyproject.toml  react-server.js  replit.nix  run-server.js  setup_local_db.sh  simple-server.js  simple-server.mjs  standalone-biometric-demo.html  start-dev.js  start-react.js  start-server.js  start-standalone.js  start-vite.js  (+24 more)
.cursor/: scratchpad.md
.githooks/: README.md  pre-commit
HeirloomProject-main/: .env.example  .gitignore  hardhat.config.js  index.html  jest.config.js
HeirloomProject-main/src/identityCapsule/backend/: .gitignore  pyproject.toml
HeirloomProject-main/src/identityCapsule/backend/app/: __init__.py  main.py
HeirloomProject-main/src/identityCapsule/backend/app/api/endpoints/: auth.py  users.py
HeirloomProject-main/src/identityCapsule/backend/app/core/: config.py  security.py
HeirloomProject-main/src/identityCapsule/backend/app/models/: user.py
HeirloomProject-main/src/identityCapsule/backend/app/schemas/: user.py
HeirloomProject-main/src/identityCapsule/backend/app/services/: __init__.py  face_verification.py  storage.py
attached_assets/: App.css  Heirloom Blockchain Project Overview.docx  app.js  index.html  (+21 more)
(+286 files in other folders)
